fix: make auto wrap

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,6 +1,7 @@
 body,
 html {
 	max-width: 100vw;
+	overflow-x: hidden;
 	font-family: "Inter", sans-serif;
 }
 
@@ -9,11 +10,6 @@ html {
 	max-width: 1440px;
 	margin: 0 auto;
 	width: 100%;
-}
-
-.main-wrapper {
-	padding-left: 1rem;
-	padding-right: 1rem;
 }
 
 
